package com.nanyin.pattern.command;

public interface Command {
    void excute();
}
