package com.nanyin.pattern.command;

public class Soldier {

    public void prepareWeapon(){
        System.out.println("Soldier prepare Weapon !!!");
    }

    public void attack(){
        System.out.println("Soldier Attack!!!");
    }

    public void retreat(){
        System.out.println("Soldier Retreat!!");
    }
}
